--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -19,11 +19,11 @@
       <div class='chat-room-form__field--right'>
         <select name="room[user_id][]">
           <option>チャットするユーザーを選択してください</option>
-            <% User.where.not(id: current_user).each do |user| %>
+            <% User.where.not(id: current_user.id).each do |user| %>
               <option value=<%= user.id %>><%= user.name %></option>
             <% end %>
         </select>
-        <input name="room[user_id][]" type="hidden" value=<%= current_user.id %>>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>      </div>
       </div>
     </div>
 
